very descriptive git commit messages

--- a/hackathon/web/index.html
+++ b/hackathon/web/index.html
@@ -25,6 +25,10 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="hackathon">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
+  
+
+  <script src=”https://www.gstatic.com/firebasejs/6.6.0/firebase-app.js"></script>
+  <script src=”https://www.gstatic.com/firebasejs/6.6.0/firebase-auth.js"></script>
 
   <title>hackathon</title>
   <link rel="manifest" href="manifest.json">
@@ -33,6 +37,7 @@
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
+
   <script>
     var serviceWorkerVersion = null;
     var scriptLoaded = false;
